--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -1,4 +1,4 @@
-name: 🔄 Update data 
+name: 🔄 Update data
 
 on:
   schedule:
@@ -25,7 +25,7 @@ jobs:
           
       - name:  📦 Install R packages
         run: |
-          install.packages(c("httr", "sf", "dplyr", "tibble", "googlePolylines", "rStrava")
+          install.packages(c("dplyr", "googlePolylines", "httr", "rStrava", "sf", "tibble"))
         shell: Rscript {0}
         
       - name: 🔄 Update data
