--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -17,15 +17,23 @@ jobs:
       - name: 🦜 Set up R
         uses: r-lib/actions/setup-r@v2
 
+      - name: 💾 Cache R packages
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.R_LIBS_USER }}
+          key: r-${{ runner.os }}-r-lib-${{ hashFiles('**/*.qmd', '**/*.R') }}
+          restore-keys: |
+            r-${{ runner.os }}-r-lib-
+
       - name: 🔧 Install system dependencies for sf
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            libudunits2-dev libgdal-dev libgeos-dev libproj-dev
+            libudunits2-dev libgdal-dev libgeos-dev libproj-dev libjq-dev
           
       - name:  📦 Install R packages
         run: |
-          install.packages(c("dplyr", "googlePolylines", "httr", "rStrava", "sf", "tibble"))
+          install.packages(c("dplyr", "googleway", "googlePolylines", "httr", "rStrava", "sf", "tibble"))
         shell: Rscript {0}
         
       - name: 🔄 Update data
@@ -36,7 +44,7 @@ jobs:
           STRAVA_ID: ${{ secrets.STRAVA_ID }}
           STRAVA_TOKEN: ${{ secrets.STRAVA_SECRET }}
         
-      - name: 💾 Commit files
+      - name: 🏷️ Commit files
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
